--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Gruppo" />
 
-    <!-- Bootsrap Icons -->
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     <!-- Particle js -->
@@ -30,7 +30,6 @@
 <body>
 
     <div class="container">
-
         <section id="Oval" class="mb-4">
             <div class="row">
                 <div class="col-md-1"></div>
@@ -81,10 +80,9 @@
                 </div>
             </div>
         </section>
-
     </div>
 
-    <!--Jquery  -->
+    <!--jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <!-- Bootstrap -->
@@ -109,6 +107,18 @@
     <script src="main.js"></script>
     <script src="controller.js"></script>
     <script src="/eel.js"></script>
+
+    <!-- Fullscreen script -->
+    <script>
+        function openFullscreen() {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            }
+        }
+
+        // Automatically open fullscreen mode when the page loads
+        window.onload = openFullscreen;
+    </script>
 </body>
 
 </html>
