--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AVAS</title>
+    <title>AVA</title>
 
     <link rel="shortcut icon" href="assets/img/S-Logo.ico" type="image/x-icon">
 
@@ -42,7 +42,7 @@
                                 <span class="circle"></span>
                                 <span class="circle"></span>
                                 <div class="text-center">
-                                    <h1 class="text display-1">AVAS</h1> <!-- Made AVAS bigger -->
+                                    <h1 class="text display-1">AVA</h1> <!-- Made AVA bigger -->
                                 </div>
                             </div>
                         </div>
@@ -54,6 +54,7 @@
                             <div id="TextInput" class="d-flex">
                                 <input type="text" class="input-field" name="chatbox" id="chatbox"
                                     placeholder="Type Here....">
+                                <button id="SendBtn" class="glow-on-hover" hidden><i class="bi bi-send"></i></button>
                                 <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic-fill"></i></button>
                                 <button id="ChatBtn" class="glow-on-hover"><i class="bi bi-chat-left-dots"></i></button>
                                 <button id="SettingsBtn" class="glow-on-hover"><i
@@ -72,7 +73,7 @@
                     <div class="col-md-12">
                         <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
                             <div class="">
-                                <p class="text-start text-light mb-4 wave-message">Hello There Its AVAS</p>
+                                <p class="text-start text-light mb-4 wave-message">Hello There Its AVA</p>
                                 <div id="siri-container"></div>
                             </div>
                         </div>
